# mattey-banana

./: .geminiignore  .gitignore  GEMINI.md  README.md  WASM_INTEGRATION.md
.beads/: daemon-error  issues.jsonl  metadata.json
.github/workflows/: deploy.yml
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: about-dialog.ts  db.ts  error-toast.ts  gemini.ts  image-gallery.ts  index.css  my-element.ts  prompt-assistant.ts  state.ts  vector-preview.ts  wasm-greet.ts
frontend/src/wasm/: matte_wasm.d.ts  matte_wasm.js  matte_wasm_bg.wasm.d.ts
wasm/: Cargo.toml
wasm/matte-cli/: Cargo.toml
wasm/matte-cli/src/: main.rs
wasm/matte-core/: Cargo.toml
wasm/matte-core/src/: lib.rs
wasm/matte-wasm/: Cargo.toml
wasm/matte-wasm/src/: lib.rs
wasm/src/: lib.rs
